Arreglo de Media queries y tamaño de imagenes Nosotros

--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -26,7 +26,7 @@
     </header> 
     <main >
       <section class="contenedornosotros">
-        <div class="grid-item-nosotros1"><img src="../img/logo.png" alt="logo de burgers mom" width="400" height="400"></div>
+        <div class="grid-item-nosotros1"><img src="../img/logo.png" alt="logo de burgers mom" class="imglogonosotros"></div>
         <div class="grid-item-nosotros2">
             <h3>¡NUESTRA HISTORIA!</h3>
             <p>Hace más de dos décadas, en el corazón de nuestra querida ciudad, nació un lugar que se convertiría en un verdadero ícono gastronómico: "BURGUER'S MOM" Su historia es un viaje de pasión por la comida, amor por la tradición y un deseo inquebrantable de satisfacer los paladares más exigentes.
@@ -42,7 +42,7 @@
             Buscamos bajar el impacto ambiental realizando acciones que nos ayuden a cuidar de nuestro planeta.
             </p>
         </div>
-        <div class="grid-item-nosotros4"> <img src="../img/recicleje.png" alt="Simbolo de reciclaje" width="350" height="350"></div>
+        <div class="grid-item-nosotros4"> <img src="../img/recicleje.png" alt="Simbolo de reciclaje" class="imglogonosotros2"></div>
       </section>
     </main>
     <footer>
