--- a/pages/locales.html
+++ b/pages/locales.html
@@ -3,83 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Locales-BURGUER'S MOM</title>
-    <link rel="shortcut icon" href="../img/Logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <title>Locales-ROYALE'S CHEESE</title>
+    <link rel="shortcut icon" href="../img/Logito.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <img src="../img/logo.png" alt="Hamburguesa logo" width="50" height="50">
-            <h1 class="logo_titulo">BURGUER'S MOM</h1>
-        </div>
-         <nav>
-             <ul class="titulo">
-                 <li><a href="../index.html" class="titulo-link">INICIO</a></li>
-                 <li><a href="./productos.html" class="titulo-link">MENU</a></li>
-                 <li><a href="./locales.html" class="titulo-link">LOCALES</a></li>
-                 <li><a href="./quienessomos.html" class="titulo-link">NOSOTROS</a></li>
-                 <li><a href="./registrarme.html" class="titulo-link">REGISTRARME</a></li>
-             </ul>
-         </nav>
-    </header> 
-    <main>
-        <section class="container__locales">
+        <nav class="header__nav">
+            <ul class="header__titulo">
+                <li><a href="../index.html" class="header__lista titulo-link">INICIO</a></li>
+                <li><a href="./productos.html" class="header__lista titulo-link">MENU</a></li>
+                <li><a href="./locales.html" class="header__lista titulo-link">LOCALES</a></li>
+                <li>
+                <div class="logo">
+                   <img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño">
+                </div>
+                </li>
+                <li><a href="./quienessomos.html" class="header__lista titulo-link">NOSOTROS</a></li>
+                <li><a href="./registrarme.html" class="header__lista titulo-link"s>REGISTRARME</a></li>
+                <li><a href="https://www.pedidosya.com" class="header__lista header__delivery titulo-link" target="_blank">DELIVERY<i class="bi bi-car-front-fill"></i></a></li>
+            </ul>
+        </nav>
+   </header> 
+    <main style="margin-bottom: 100px;">
+
+        <section class="container__locales__titulo">
             <div class="div1__titulo__locales">
-            <h3 class="titulo__locales">Nuestros locales</h3>
-            </div>
-            <p class="texto__locales"><i class="bi bi-caret-right-fill"></i>Actualmente contamos con 4 sucursales en Buenos Aires<i class="bi bi-signpost-2"></i></p>
-            <div class="div2__titulo__locales">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.33124796495!2d-58.515705787914044!3d-34.61575127000769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3d05457fbb%3A0xe160f4fce7f7c017!2sBuenos%20Aires!5e0!3m2!1ses!2sar!4v1697450967232!5m2!1ses!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h2 class="titulo__locales">NUESTROS LOCALES</h2>
             </div>
         </section>
-        <section class="div3__titulo__locales">
-            <div class="div4__titulo__locales">
-                <h2 class="texto1__locales">BURGUER'S MOM RAMOS MEJIA</h2>
-                <p><i class="bi bi-geo-alt-fill"></i>Avenida de Mayo 151</p>
+
+
+        <div class="container__locales__info">
+            <div class="caja__locales">
+                <img src="../img/Foto.negocio.1.jpg" alt="">
+                <div class="locales__capa">
+                    <h2 class="locales__capa__titulo">ROSARIO</h2>
+                    <p>Bv. Avellaneda 519 bis, Rosario, Santa fe</p>
+                </div>
             </div>
-            <div class="div4__titulo__locales">
-                <h2 class="texto1__locales">BURGUER'S MOM FLORENCIO VARELA</h2>
-                <p><i class="bi bi-geo-alt-fill"></i>Avenida Jose de San Martin y Asuncion</p>
+
+            <div class="caja__locales">
+                <img src="../img/Foto.negocio.2.jpg" alt="">
+                <div class="locales__capa">
+                    <h2 class="locales__capa__titulo">QUILMES</h2>
+                    <p>Av. Calchaquí 3950, B1879 Quilmes Oeste, Provincia de Buenos Aires</p>
+                </div>
             </div>
-            <div class="div4__titulo__locales">
-                <h2 class="texto1__locales">BURGUER'S MOM LA PLATA</h2>
-                <p><i class="bi bi-geo-alt-fill"></i>Avenida 7 y 44</p>
+        </div>
+
+
+        <div class="container__locales__info">
+            <div class="caja__locales">
+                <img src="../img/Foto.negocio.3.jpg" alt="">
+                <div class="locales__capa">
+                    <h2 class="locales__capa__titulo">LA PLATA</h2>
+                    <p>Calle 49 N° 774, La Plata</p>
+                </div>
             </div>
-            <div class="div4__titulo__locales">
-                <h2 class="texto1__locales">BURGUER'S MOM PALERMO</h2>
-                <p><i class="bi bi-geo-alt-fill"></i>Avenida Santa fe y Uriarte</p>
+
+            <div class="caja__locales">
+                <img src="../img/Foto.negocio.4.webp" alt="">
+                <div class="locales__capa">
+                    <h2 class="locales__capa__titulo">CABALLITO</h2>
+                    <p>Village Cines Caballito - Av. Rivadavia 5071</p>
+                </div>
             </div>
-        </section>
+        </div>
+
+
+        <div class="container__locales__info">
+            <div class="caja__locales">
+                <img src="../img/Foto.negocio.5.png" alt="">
+                <div class="locales__capa">
+                    <h2 class="locales__capa__titulo">RAMOS MEJIA</h2>
+                    <p>Avenida de Mayo 151</p>
+                </div>
+            </div>
+
+            <div class="caja__locales">
+                <img src="../img/Foto.negocio.6.jpg" alt="">
+                <div class="locales__capa">
+                    <h2 class="locales__capa__titulo">ALTO AVELLANEDA</h2>
+                    <p>General Güemes 897</p>
+                </div>
+            </div>
+        </div>
+
+
     </main>
     <footer>
         <section>
             <div class="logo_footer1">
-                <h2 class="logo_footer2">BURGUER'S MOM</h2>
+                <img src="../img/Logito.png" alt="" width="200" height="200" class="logo_footer2">
+            </div>
             <div class="footer1">
                 <ul class="footer2">
-                    <li><a href="./index.html" class="titulo-link">INICIO</a></li>
-                    <div>-</div>
-                    <li><a href="./pages/productos.html" class="titulo-link">MENU</a></li>
-                    <div>-</div>
-                    <li><a href="./pages/locales.html" class="titulo-link">LOCALES</a></li>
-                    <div>-</div>
-                    <li><a href="./pages/quienessomos.html" class="titulo-link">NOSOTROS</a></li>
-                    <div>-</div>
-                    <li><a href="./pages/registrarme.html" class="titulo-link"s>REGISTRARME</a></li>
+                    <h3 class="footer__subtitulos">Royale's Cheese</h2>
+                    <li><a href="../index.html" class="lista__footer titulo-link">INICIO</a></li>
+                    <li><a href="./productos.html" class="lista__footer titulo-link">MENU</a></li>
+                    <li><a href="./locales.html" class="lista__footer titulo-link">LOCALES</a></li>
+                    <li><a href="./quienessomos.html" class="lista__footer titulo-link">NOSOTROS</a></li>
+                    <li><a href="./registrarme.html" class="lista__footer titulo-link">REGISTRARME</a></li>
+                    <li><a href="https://www.pedidosya.com" class="lista__footer titulo-link">DELIVERY</a></li>
+                </ul>
+                <ul class="footer3">
+                    <li><img src="../img/CertificadoNatural.png" alt="" width="250" height="250" style="margin-left: 20px;"></li>
+                </ul>
+                <ul class="footer4">
+                    <h3 class="footer__subtitulos">Redes</h2>
+                    <li><a href="#" class="footer4__redes titulo-link"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="#" class="footer4__redes titulo-link"><i class="bi bi-youtube"></i></a></li>
+                    <li><a href="#" class="footer4__redes titulo-link"><i class="bi bi-twitter-x"></i></a></li>
                 </ul>
             </div>
-            <div class="redes">
-                SEGUINOS
-                <p>
-                    <a href="https://facebook.com"><img src="../img/facebook.png" alt="Logo de facebook" width="24" height="24" target="_blank"></a> 
-                    <a href="https://instagram.com"><img src="../img/instagram.png.png" alt="Logo de instagram" width="24" height="24" target="_blank"></a>
-                    <a href="https://youtube.com"><img src="../img/youtube.png" alt="Logo de youtube" width="24" height="24" target="_blank"></a>
-                </p>
+            <div class="footer5">
+                Royale's Cheese<i class="bi bi-p-circle"></i>2023. By powered.
             </div>
         </section>
     </footer>
-
 </body>
 </html>
