--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -3,28 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros-BURGUER'S MOM</title>
-    <link rel="shortcut icon" href="../img/Logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <title>Nosotros-ROYALE'S CHEESE</title>
+    <link rel="shortcut icon" href="../img/Logito.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <img src="../img/logo.png" alt="Hamburguesa logo" width="50" height="50">
-            <h1 class="logo_titulo">BURGUER'S MOM</h1>
-        </div>
-         <nav>
-             <ul class="titulo">
-                 <li><a href="../index.html" class="titulo-link">INICIO</a></li>
-                 <li><a href="./productos.html" class="titulo-link">MENU</a></li>
-                 <li><a href="./locales.html" class="titulo-link">LOCALES</a></li>
-                 <li><a href="./quienessomos.html" class="titulo-link">NOSOTROS</a></li>
-                 <li><a href="./registrarme.html" class="titulo-link">REGISTRARME</a></li>
-             </ul>
-         </nav>
-    </header> 
-    <main >
+        <nav class="header__nav">
+            <ul class="header__titulo">
+                <li><a href="../index.html" class="header__lista titulo-link">INICIO</a></li>
+                <li><a href="./productos.html" class="header__lista titulo-link">MENU</a></li>
+                <li><a href="./locales.html" class="header__lista titulo-link">LOCALES</a></li>
+                <li>
+                <div class="logo">
+                   <img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño">
+                </div>
+                </li>
+                <li><a href="./quienessomos.html" class="header__lista titulo-link">NOSOTROS</a></li>
+                <li><a href="./registrarme.html" class="header__lista titulo-link"s>REGISTRARME</a></li>
+                <li><a href="https://www.pedidosya.com" class="header__lista header__delivery titulo-link" target="_blank">DELIVERY<i class="bi bi-car-front-fill"></i></a></li>
+            </ul>
+        </nav>
+   </header> 
+    <main>
+        <section class="nosotros__subtitulo">
+            <div class="seccion__nosotros">
+                <h2 class="sobre__nosotros">SOBRE NOSOTROS</h2>
+            </div>
+            </section >
       <section class="contenedornosotros">
         <div class="grid-item-nosotros1"><img src="../img/logo.png" alt="logo de burgers mom" class="imglogonosotros"></div>
         <div class="grid-item-nosotros2">
@@ -48,30 +56,32 @@
     <footer>
         <section>
             <div class="logo_footer1">
-                <h2 class="logo_footer2">BURGUER'S MOM</h2>
+                <img src="../img/Logito.png" alt="" width="200" height="200" class="logo_footer2">
+            </div>
             <div class="footer1">
                 <ul class="footer2">
-                    <li><a href="./index.html" class="titulo-link">INICIO</a></li>
-                    <div>-</div>
-                    <li><a href="./pages/productos.html" class="titulo-link">MENU</a></li>
-                    <div>-</div>
-                    <li><a href="./pages/locales.html" class="titulo-link">LOCALES</a></li>
-                    <div>-</div>
-                    <li><a href="./pages/quienessomos.html" class="titulo-link">NOSOTROS</a></li>
-                    <div>-</div>
-                    <li><a href="./pages/registrarme.html" class="titulo-link"s>REGISTRARME</a></li>
+                    <h3 class="footer__subtitulos">Royale's Cheese</h2>
+                    <li><a href="../index.html" class="lista__footer titulo-link">INICIO</a></li>
+                    <li><a href="./productos.html" class="lista__footer titulo-link">MENU</a></li>
+                    <li><a href="./locales.html" class="lista__footer titulo-link">LOCALES</a></li>
+                    <li><a href="./quienessomos.html" class="lista__footer titulo-link">NOSOTROS</a></li>
+                    <li><a href="./registrarme.html" class="lista__footer titulo-link">REGISTRARME</a></li>
+                    <li><a href="https://www.pedidosya.com" class="lista__footer titulo-link">DELIVERY</a></li>
+                </ul>
+                <ul class="footer3">
+                    <li><img src="../img/CertificadoNatural.png" alt="" width="250" height="250" style="margin-left: 20px;"></li>
+                </ul>
+                <ul class="footer4">
+                    <h3 class="footer__subtitulos">Redes</h2>
+                    <li><a href="#" class="footer4__redes titulo-link"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="#" class="footer4__redes titulo-link"><i class="bi bi-youtube"></i></a></li>
+                    <li><a href="#" class="footer4__redes titulo-link"><i class="bi bi-twitter-x"></i></a></li>
                 </ul>
             </div>
-            <div class="redes">
-                SEGUINOS
-                <p>
-                    <a href="https://facebook.com"><img src="../img/facebook.png" alt="Logo de facebook" width="24" height="24" target="_blank"></a> 
-                    <a href="https://instagram.com"><img src="../img/instagram.png.png" alt="Logo de instagram" width="24" height="24" target="_blank"></a>
-                    <a href="https://youtube.com"><img src="../img/youtube.png" alt="Logo de youtube" width="24" height="24" target="_blank"></a>
-                </p>
+            <div class="footer5">
+                Royale's Cheese<i class="bi bi-p-circle"></i>2023. By powered.
             </div>
         </section>
     </footer>
-    
 </body>
 </html>
