--- a/index.html
+++ b/index.html
@@ -12,36 +12,48 @@
 </head>
 <body>
     <main class="main">
+
         <section class="maininicio">
-        <header class="header">
-            <nav class="header__nav">
-                <ul class="header__titulo">
-                    <li><a href="./index.html" class="header__lista titulo-link">INICIO</a></li>
-                    <li><a href="./pages/productos.html" class="header__lista titulo-link">MENU</a></li>
-                    <li><a href="./pages/locales.html" class="header__lista titulo-link">LOCALES</a></li>
-                    <li>
-                    <div class="logo">
-                       <img src="./img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño">
-                    </div>
-                    </li>
-                    <li><a href="./pages/quienessomos.html" class="header__lista titulo-link">NOSOTROS</a></li>
-                    <li><a href="./pages/registrarme.html" class="header__lista titulo-link"s>REGISTRARME</a></li>
-                    <li><a href="https://www.pedidosya.com" class="header__lista header__delivery titulo-link" target="_blank">DELIVERY<i class="bi bi-car-front-fill"></i></a></li>
-                </ul>
-            </nav>
-       </header> 
-        <div class="maininicio1">
-            <div class="maintexto">
-                <h4 class="mainpromo">Promocion de la semana!</h4>
-                <h1 class="mainmonster">MONSTER BURGUER!</h1>
-                <h2>2 x 1 <i class="bi bi-chat-left-heart-fill"></i></h2>
-                <a href="./pages/productos.html" class="mainbutton titulo-link" style="color: black;">ver mas</a>
+            <div class="header__img__escondida__responsive">
+                <img src="./img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño__responsive">
             </div>
-            <div class="mainpromoburguer">
-                <img src="./img/Hamburguesa.inicio.png" alt="" >
+           <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="header__father container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="header collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav header__nav">
+                    <ul class="header__titulo">
+                        <li><a href="./index.html" class="header__lista titulo-link">INICIO</a></li>
+                        <li><a href="./pages/productos.html" class="header__lista titulo-link">MENU</a></li>
+                        <li><a href="./pages/locales.html" class="header__lista titulo-link">LOCALES</a></li>
+                        <li>
+                        <div class="logo">
+                           <img src="./img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño">
+                        </div>
+                        </li>
+                        <li><a href="./pages/quienessomos.html" class="header__lista titulo-link">NOSOTROS</a></li>
+                        <li><a href="./pages/registrarme.html" class="header__lista titulo-link"s>REGISTRARME</a></li>
+                        <li><a href="https://www.pedidosya.com" class="header__lista header__delivery titulo-link" target="_blank">DELIVERY<i class="bi bi-car-front-fill"></i></a></li>
+                    </ul>
+                </div>
+              </div>
             </div>
-        </div>
-        </section>
+          </nav>
+            <div class="maininicio1">
+                <div class="maintexto">
+                    <h4 class="mainpromo">Promocion de la semana!</h4>
+                    <h1 class="mainmonster">MONSTER BURGUER!</h1>
+                    <h2>2 x 1 <i class="bi bi-chat-left-heart-fill"></i></h2>
+                    <a href="./pages/productos.html" class="mainbutton titulo-link" style="color: black;">ver mas</a>
+                </div>
+                <div class="mainpromoburguer">
+                    <img src="./img/Hamburguesa.inicio.png" alt="" >
+                </div>
+            </div>
+            </section>
+
         <section class="sectiongrid1">
             <div class="sectiongrid2">
                 <i class="bi bi-hand-thumbs-up"></i>
@@ -52,12 +64,16 @@
             </div>
             <div class="sectiongrid3"><a href="./pages/quienessomos.html" class="titulo-link sectiongrid4" style="color: black;">¿Queres saber mas de nosotros?</a></div>
         </section>
+
     </main>
+
     <footer>
         <section>
+
             <div class="logo_footer1">
                 <img src="./img/Logito.png" alt="" width="200" height="200" class="logo_footer2">
             </div>
+
             <div class="footer1">
                 <ul class="footer2">
                     <h2 style="text-decoration: underline black;">Royale's Cheese</h2>
@@ -78,10 +94,18 @@
                     <li><a href="#" class="footer4__redes titulo-link"><i class="bi bi-twitter-x"></i></a></li>
                 </ul>
             </div>
-            <div class="footer5">
-               Royale's Cheese<i class="bi bi-p-circle"></i>2023. By powered.
+
+            <div class="footer__img__escondida__responsive">
+            <img src="./img/CertificadoNatural.png" alt="" width="250" height="250">
             </div>
+
+            <div class="footer5">
+                Royale's Cheese<i class="bi bi-p-circle"></i>2023. By powered.
+             </div>
+
         </section>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
