--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,8 +10,17 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <header class="header">
-        <nav class="header__nav">
+
+    <div class="header__img__escondida__responsive">
+        <img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño__responsive">
+    </div>
+   <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="header__father container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="header collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav header__nav">
             <ul class="header__titulo">
                 <li><a href="../index.html" class="header__lista titulo-link">INICIO</a></li>
                 <li><a href="./productos.html" class="header__lista titulo-link">MENU</a></li>
@@ -25,8 +34,10 @@
                 <li><a href="./registrarme.html" class="header__lista titulo-link"s>REGISTRARME</a></li>
                 <li><a href="https://www.pedidosya.com" class="header__lista header__delivery titulo-link" target="_blank">DELIVERY<i class="bi bi-car-front-fill"></i></a></li>
             </ul>
-        </nav>
-   </header> 
+        </div>
+      </div>
+    </div>
+  </nav>
 
 
     <main class="mainproductos">
@@ -83,28 +94,31 @@
             <div><h2 class="productos__subtitulo__seccion__size">POSTRES</h2></div>
         </div>
 
-
+        <div class="productos__postres__posicios__responsive">
         <section class="productos__postres">
             <div class="productos__postres__caja">
-                <img src="../img/Sundae.png" alt="" style="width: 300px;">
+                <img class="productos__postres__img" src="../img/Sundae.png" alt="" style="width: 300px;">
                 <h4 class="productos__postres__titulo">Helado Sundae</h4>
                 <p class="productos__postres__parrafo">Sundae sabor Vainilla o chocolate</p>
             </div>
             <div class="productos__postres__caja">
-                <img src="../img/Conos.png" alt="" style="width: 233px;">
+                <img class="productos__postres__img" src="../img/Conos.png" alt="" style="width: 233px;">
                 <h4 class="productos__postres__titulo">Helado Cono</h4>
                 <p class="productos__postres__parrafo">Sabor vainilla, chocolate y banana</p>
             </div>
         </section>
+        </div> 
 
     </main>
 
 
     <footer>
         <section>
+
             <div class="logo_footer1">
                 <img src="../img/Logito.png" alt="" width="200" height="200" class="logo_footer2">
             </div>
+
             <div class="footer1">
                 <ul class="footer2">
                     <h3 class="footer__subtitulos">Royale's Cheese</h2>
@@ -125,10 +139,18 @@
                     <li><a href="#" class="footer4__redes titulo-link"><i class="bi bi-twitter-x"></i></a></li>
                 </ul>
             </div>
+
+            <div class="footer__img__escondida__responsive">
+                <img src="../img/CertificadoNatural.png" alt="" width="250" height="250">
+            </div>
+
             <div class="footer5">
                 Royale's Cheese<i class="bi bi-p-circle"></i>2023. By powered.
             </div>
+
         </section>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
