SASS finalizado pero hay error con header de bootstrap

--- a/pages/locales.html
+++ b/pages/locales.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Locales-ROYALE'S CHEESE</title>
+    <meta name="description" content="¡Busca tu Royale's Cheese mas cercano!">
+    <meta name="keywords" content="Hamburguesería, Local de hamburguesas, Comida rápida de calidad, Hamburguesas artesanales, Local gastronómico, Restaurante gastronómico">
     <link rel="shortcut icon" href="../img/Logito.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
     <div class="header__img__escondida__responsive">
-        <img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño__responsive">
+        <img src="../img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño__responsive">
     </div>
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="header__father container-fluid">
@@ -50,7 +52,7 @@
 
         <div class="container__locales__info">
             <div class="caja__locales">
-                <img src="../img/Foto.negocio.1.jpg" alt="">
+                <img src="../img/Foto.negocio.1.jpg" alt="Foto local de Rosario">
                 <div class="locales__capa">
                     <h2 class="locales__capa__titulo">ROSARIO</h2>
                     <p>Bv. Avellaneda 519 bis, Rosario, Santa fe</p>
@@ -58,7 +60,7 @@
             </div>
 
             <div class="caja__locales">
-                <img src="../img/Foto.negocio.2.jpg" alt="">
+                <img src="../img/Foto.negocio.2.jpg" alt="Foto local de Quilmes">
                 <div class="locales__capa">
                     <h2 class="locales__capa__titulo">QUILMES</h2>
                     <p>Av. Calchaquí 3950, B1879 Quilmes Oeste, Provincia de Buenos Aires</p>
@@ -69,7 +71,7 @@
 
         <div class="container__locales__info">
             <div class="caja__locales">
-                <img src="../img/Foto.negocio.3.jpg" alt="">
+                <img src="../img/Foto.negocio.3.jpg" alt="Foto local de La plata">
                 <div class="locales__capa">
                     <h2 class="locales__capa__titulo">LA PLATA</h2>
                     <p>Calle 49 N° 774, La Plata</p>
@@ -77,7 +79,7 @@
             </div>
 
             <div class="caja__locales">
-                <img src="../img/Foto.negocio.4.webp" alt="">
+                <img src="../img/Foto.negocio.4.webp" alt="Foto local de Caballito">
                 <div class="locales__capa">
                     <h2 class="locales__capa__titulo">CABALLITO</h2>
                     <p>Village Cines Caballito - Av. Rivadavia 5071</p>
@@ -88,7 +90,7 @@
 
         <div class="container__locales__info">
             <div class="caja__locales">
-                <img src="../img/Foto.negocio.5.png" alt="">
+                <img src="../img/Foto.negocio.5.png" alt="Foto local de Ramos mejia">
                 <div class="locales__capa">
                     <h2 class="locales__capa__titulo">RAMOS MEJIA</h2>
                     <p>Avenida de Mayo 151</p>
@@ -96,7 +98,7 @@
             </div>
 
             <div class="caja__locales">
-                <img src="../img/Foto.negocio.6.jpg" alt="">
+                <img src="../img/Foto.negocio.6.jpg" alt="Foto local de Alto Avellaneda">
                 <div class="locales__capa">
                     <h2 class="locales__capa__titulo">ALTO AVELLANEDA</h2>
                     <p>General Güemes 897</p>
@@ -111,7 +113,7 @@
         <section>
 
             <div class="logo_footer1">
-                <img src="../img/Logito.png" alt="" width="200" height="200" class="logo_footer2">
+                <img src="../img/Logito.png" alt="Logo de Royale's Cheese" width="200" height="200" class="logo_footer2">
             </div>
 
             <div class="footer1">
@@ -125,7 +127,7 @@
                     <li><a href="https://www.pedidosya.com" class="lista__footer titulo-link">DELIVERY</a></li>
                 </ul>
                 <ul class="footer3">
-                    <li><img src="../img/CertificadoNatural.png" alt="" width="250" height="250" style="margin-left: 20px;"></li>
+                    <li><img src="../img/CertificadoNatural.png" alt=" Certificado productos organicos" width="250" height="250" style="margin-left: 20px;"></li>
                 </ul>
                 <ul class="footer4">
                     <h3 class="footer__subtitulos">Redes</h2>
@@ -136,7 +138,7 @@
             </div>
 
             <div class="footer__img__escondida__responsive">
-                <img src="../img/CertificadoNatural.png" alt="" width="250" height="250">
+                <img src="../img/CertificadoNatural.png" alt="Certificado productos organicos" width="250" height="250">
             </div>
 
             <div class="footer5">
