--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio-ROYALE'S CHEESE</title>
+    <meta name="description" content="Jugosas hamburguesas artesanales hasta sabores innovadores que despiertan tus papilas gustativas.">
+    <meta name="keywords" content="Hamburguesería, Local de hamburguesas, Comida rápida de calidad, Hamburguesas artesanales, Local gastronómico, Restaurante gastronómico">
     <link rel="shortcut icon" href="./img/Logito.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilos.css">
-    
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <main class="main">
+    <main>
 
         <section class="maininicio">
             <div class="header__img__escondida__responsive">
-                <img src="./img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño__responsive">
+                <img src="./img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño__responsive">
             </div>
-           <nav class="navbar navbar-expand-lg bg-body-tertiary">
+           <nav class="navbar navbar-expand-lg bg-body-tertiary"> 
             <div class="header__father container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,7 +41,7 @@
                 </div>
               </div>
             </div>
-          </nav>
+           </nav>
             <div class="maininicio1">
                 <div class="maintexto">
                     <h4 class="mainpromo">Promocion de la semana!</h4>
@@ -49,10 +50,10 @@
                     <a href="./pages/productos.html" class="mainbutton titulo-link" style="color: black;">ver mas</a>
                 </div>
                 <div class="mainpromoburguer">
-                    <img src="./img/Hamburguesa.inicio.png" alt="" >
+                    <img src="./img/Hamburguesa.inicio.png" alt="Hamburguesa Monster Burguer" >
                 </div>
             </div>
-            </section>
+        </section>
 
         <section class="sectiongrid1">
             <div class="sectiongrid2">
@@ -71,7 +72,7 @@
         <section>
 
             <div class="logo_footer1">
-                <img src="./img/Logito.png" alt="" width="200" height="200" class="logo_footer2">
+                <img src="./img/Logito.png" alt="Logo de Royale's Cheese" width="200" height="200" class="logo_footer2">
             </div>
 
             <div class="footer1">
@@ -85,7 +86,7 @@
                     <li><a href="https://www.pedidosya.com" class="lista__footer titulo-link">DELIVERY</a></li>
                 </ul>
                 <ul class="footer3">
-                    <li><img src="./img/CertificadoNatural.png" alt="" width="250" height="250"></li>
+                    <li><img src="./img/CertificadoNatural.png" alt="Certificado productos organicos" width="250" height="250"></li>
                 </ul>
                 <ul class="footer4">
                     <h2 style="text-decoration: underline black;">Redes</h2>
@@ -96,7 +97,7 @@
             </div>
 
             <div class="footer__img__escondida__responsive">
-            <img src="./img/CertificadoNatural.png" alt="" width="250" height="250">
+            <img src="./img/CertificadoNatural.png" alt="Certificado productos organicos" width="250" height="250">
             </div>
 
             <div class="footer5">
