--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu-ROYALE'S CHEESE</title>
+    <meta name="description" content="Explora nuestro apetitoso menú de hamburguesas que te deleitarán.">
+    <meta name="keywords" content="Hamburguesería, Local de hamburguesas, Comida rápida de calidad, Hamburguesas artesanales, Local gastronómico, Restaurante gastronómico">
     <link rel="shortcut icon" href="../img/Logito.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
     <div class="header__img__escondida__responsive">
-        <img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño__responsive">
+        <img src="../img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño__responsive">
     </div>
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="header__father container-fluid">
@@ -97,12 +99,12 @@
         <div class="productos__postres__posicios__responsive">
         <section class="productos__postres">
             <div class="productos__postres__caja">
-                <img class="productos__postres__img" src="../img/Sundae.png" alt="" style="width: 300px;">
+                <img class="productos__postres__img" src="../img/Sundae.png" alt="Helado Sundae" style="width: 300px;">
                 <h4 class="productos__postres__titulo">Helado Sundae</h4>
                 <p class="productos__postres__parrafo">Sundae sabor Vainilla o chocolate</p>
             </div>
             <div class="productos__postres__caja">
-                <img class="productos__postres__img" src="../img/Conos.png" alt="" style="width: 233px;">
+                <img class="productos__postres__img" src="../img/Conos.png" alt="Helados Cono" style="width: 233px;">
                 <h4 class="productos__postres__titulo">Helado Cono</h4>
                 <p class="productos__postres__parrafo">Sabor vainilla, chocolate y banana</p>
             </div>
@@ -116,7 +118,7 @@
         <section>
 
             <div class="logo_footer1">
-                <img src="../img/Logito.png" alt="" width="200" height="200" class="logo_footer2">
+                <img src="../img/Logito.png" alt="Logo de Royale's Cheese" width="200" height="200" class="logo_footer2">
             </div>
 
             <div class="footer1">
@@ -141,7 +143,7 @@
             </div>
 
             <div class="footer__img__escondida__responsive">
-                <img src="../img/CertificadoNatural.png" alt="" width="250" height="250">
+                <img src="../img/CertificadoNatural.png" alt="Certificado productos organicos" width="250" height="250">
             </div>
 
             <div class="footer5">
