--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros-ROYALE'S CHEESE</title>
+    <meta name="description" content="Para confiar en nosotros conocenos un poco mas.">
+    <meta name="keywords" content="Hamburguesería, Local de hamburguesas, Comida rápida de calidad, Hamburguesas artesanales, Local gastronómico, Restaurante gastronómico">
     <link rel="shortcut icon" href="../img/Logito.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
     <div class="header__img__escondida__responsive">
-        <img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño__responsive">
+        <img src="../img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño__responsive">
     </div>
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="header__father container-fluid">
@@ -44,9 +46,11 @@
             <div class="seccion__nosotros">
                 <h2 class="sobre__nosotros">SOBRE NOSOTROS</h2>
             </div>
-            </section >
-      <section class="contenedornosotros">
-        <div class="grid-item-nosotros1"><img src="../img/logo.png" alt="hamburguesa" class="imglogonosotros"></div>
+        </section>
+        <section class="contenedornosotros">
+        <div class="grid-item-nosotros1">
+            <img src="../img/logo.png" alt="Imagen de hamburguesa en formato Logo " class="imglogonosotros">
+        </div>
         <div class="grid-item-nosotros2">
             <h3>¡NUESTRA HISTORIA!</h3>
             <p>Hace más de dos décadas, en el corazón de nuestra querida ciudad, nació un lugar que se convertiría en un verdadero ícono gastronómico: "BURGUER'S MOM" Su historia es un viaje de pasión por la comida, amor por la tradición y un deseo inquebrantable de satisfacer los paladares más exigentes.
@@ -70,7 +74,7 @@
         <section>
 
             <div class="logo_footer1">
-                <img src="../img/Logito.png" alt="" width="200" height="200" class="logo_footer2">
+                <img src="../img/Logito.png" alt="Logo de Royale's Cheese" width="200" height="200" class="logo_footer2">
             </div>
 
             <div class="footer1">
@@ -84,7 +88,7 @@
                     <li><a href="https://www.pedidosya.com" class="lista__footer titulo-link">DELIVERY</a></li>
                 </ul>
                 <ul class="footer3">
-                    <li><img src="../img/CertificadoNatural.png" alt="" width="250" height="250" style="margin-left: 20px;"></li>
+                    <li><img src="../img/CertificadoNatural.png" alt="Certificado productos organicos" width="250" height="250" style="margin-left: 20px;"></li>
                 </ul>
                 <ul class="footer4">
                     <h3 class="footer__subtitulos">Redes</h2>
@@ -95,7 +99,7 @@
             </div>
 
             <div class="footer__img__escondida__responsive">
-                <img src="../img/CertificadoNatural.png" alt="" width="250" height="250">
+                <img src="../img/CertificadoNatural.png" alt="Certificado productos organicos" width="250" height="250">
             </div>
 
             <div class="footer5">
