--- a/pages/registrarme.html
+++ b/pages/registrarme.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrarme-ROYALE'S CHEESE</title>
+    <meta name="description" content="¡Únite a nuestra comunidad de amantes de las hamburguesas registrándote hoy!">
+    <meta name="keywords" content="Hamburguesería, Local de hamburguesas, Comida rápida de calidad, Hamburguesas artesanales, Local gastronómico, Restaurante gastronómico">
     <link rel="shortcut icon" href="../img/Logito.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <main class="menu__registrarme"> 
         <div class="tarjeta__registrarme">
             <div class="container tarjeta__registrarme2">
                 <div class="logo div__logo__registrarme">
-                    <img src="../img/logo.png" alt="Hamburguesa logo" width="50" height="50">
-                    <h1 class="logo_titulo">BURGUER'S MOM</h1>
+                    <img src="../img/Logito.png" alt="Hamburguesa logo" width="50" height="50">
+                    <h1 class="logo_titulo">ROYALE'S CHEESE</h1>
                 </div>
                 <p class="div__logo__texto__registrarme">REGISTRARME</p>
                 <div class="row tarjeta__registrarme3">
