Carpeta SASS y cambios para entrega final

--- a/index.html
+++ b/index.html
@@ -61,9 +61,60 @@
                 <h5 class="grid-item-inicio">Conoce nuestro menu!</h3>
                 <h3 class="grid-item-inicio">LAS MEJORES BURGUER'S</h3>
                 <p class="grid-item-inicio">Nuestras hamburguesas de 100% carne vacuna, con el mejor pan de papa.</p>
-                <a href="./pages/productos.html" class="titulo-link grid-item-inicio1" style="color: black; ">ver los productos</a>
+                <a href="./pages/productos.html" class="titulo-link grid-item-inicio1" style="color: black; ">ver los productos <i class="bi bi-arrow-right"></i> <i class="bi bi-arrow-down"></i></a>
             </div>
-            <div class="sectiongrid3"><a href="./pages/quienessomos.html" class="titulo-link sectiongrid4" style="color: black;">¿Queres saber mas de nosotros?</a></div>
+            <div class="sectiongrid3">
+                <img class="sectiongrid4" src="./img/Burguer.grid.inicio.jpg" alt="Hamburguesa de fondo">
+            </div>
+        </section>
+
+        <section class="section__overflow">
+            <div class="display__overflow">
+                <div class="titulo__overflow">
+                    <h2 class="titulo__overflow__size">#DISFRUTÁ</h2>
+                </div>
+            </div>
+            <div class="overflow__">
+                <div class="carrousel__overflow" draggable="true">
+                    <div class="carrousel__overflow__secciones">
+                        <img class="carrousel__overflow__img" src="./img/Foto.1.overflow.jpg" alt="">
+                    </div>
+                    <div class="carrousel__overflow__secciones">
+                        <img class="carrousel__overflow__img" src="./img/Foto.2.overflow.jpg" alt="">
+                    </div>
+                    <div class="carrousel__overflow__secciones">
+                        <img class="carrousel__overflow__img" src="./img/Foto.3.overflow.jpg" alt="">
+                    </div>
+                    <div class="carrousel__overflow__secciones">
+                        <img class="carrousel__overflow__img" src="./img/Foto.4.overflow.jpg" alt="">
+                    </div>
+                    <div class="carrousel__overflow__secciones">
+                        <img class="carrousel__overflow__img" src="./img/Foto.5.overflow.jpg" alt="">
+                    </div>
+                    <div class="carrousel__overflow__secciones">
+                        <img class="carrousel__overflow__img" src="./img/Foto.6.overflow.jpg" alt="">
+                    </div>
+                    <div class="carrousel__overflow__secciones">
+                        <img class="carrousel__overflow__img" src="./img/Foto.2.overflow.jpg" alt="">
+                    </div>
+                    <div class="carrousel__overflow__secciones">
+                        <img class="carrousel__overflow__img" src="./img/Foto.3.overflow.jpg" alt="">
+                    </div>
+                    <div class="carrousel__overflow__secciones">
+                        <img class="carrousel__overflow__img" src="./img/Foto.4.overflow.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="overflow__desliza">
+                <p class="overflow__desliza__hijo"><i class="bi bi-arrow-left"></i>DESLIZAR<i class="bi bi-arrow-right"></i></p>
+            </div>
+        </section>
+
+        <section class="inicio__separador">
+            <div class="inicio__separador__2">
+                <h2 class="inicio__separador__3">#ROYALE'S CHEESE</h2>
+                <h2 class="inicio__separador__4">#N°1 DE ARGENTINA</h2>
+            </div>
         </section>
 
     </main>
