--- a/pages/crearcuenta.html
+++ b/pages/crearcuenta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarme-ROYALE'S CHEESE</title>
+    <title>Registrarme:Crear cuenta-ROYALE'S CHEESE</title>
     <meta name="description" content="¡Únite a nuestra comunidad de amantes de las hamburguesas registrándote hoy!">
     <meta name="keywords" content="Hamburguesería, Local de hamburguesas, Comida rápida de calidad, Hamburguesas artesanales, Local gastronómico, Restaurante gastronómico">
     <link rel="shortcut icon" href="../img/Logito.png" type="image/x-icon">
@@ -12,17 +12,14 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <main class="menu__registrarme">
+    <main class="menu__registrarme"> 
         <div class="tarjeta__registrarme">
             <div class="container tarjeta__registrarme2">
-                <div>
-                    <h2><a href="../index.html"><i class="bi bi-arrow-left" style="display: flex; justify-content: center; color: rgb(233, 175, 68);">VOLVER</i></a></h2>
-                </div>
                 <div class="logo div__logo__registrarme">
                     <img src="../img/Logito.png" alt="Hamburguesa logo" width="50" height="50">
                     <h1 class="logo_titulo">ROYALE'S CHEESE</h1>
                 </div>
-                <p class="div__logo__texto__registrarme">iniciar sesión</p>
+                <p class="div__logo__texto__registrarme">Registrarme</p>
                 <div class="row tarjeta__registrarme3">
                     <div class="form-floating mb-3">
                         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -30,15 +27,10 @@
                       </div>
                       <div class="form-floating form__div1">
                         <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                        <label for="floatingPassword">Contraseña</label>
+                        <label for="floatingPassword">Crear contraseña (minimo 6 caracteres)</label>
                       </div>
                       <button class="button__iniciar__registrarme">
-                        iniciar sesion
-                      </button>
-                      <button class="button__iniciar__crear_cuenta">
-                        <a href="./crearcuenta.html">
-                        Crear cuenta
-                        </a>
+                        Registrarme
                       </button>
                     </div>
                 </div>
@@ -47,7 +39,7 @@
                     <div class="div__divider__center">o</div> 
                     <div class="div__divider__right"></div>   
                 </div>
-                <div class="div__redes__enlaces__registrarme">
+                <div class="div__redes__enlaces__registrarme" style="padding-top: 15px;">
                     <a href=""><button class="a__redes__enlaces__registrarme"><i class="bi bi-google"></i> Continuar con Google</button></a>
                     <a href=""><button class="a__redes__enlaces__registrarme"><i class="bi bi-facebook"></i> Continuar con Facebook</button></a>
                     <a href=""><button class="a__redes__enlaces__registrarme"><i class="bi bi-apple"></i> Continuar con Apple</button></a>
