--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -41,33 +41,59 @@
     </div>
   </nav>
   
-    <main>
+    <main >
         <section class="nosotros__subtitulo">
             <div class="seccion__nosotros">
                 <h2 class="sobre__nosotros">SOBRE NOSOTROS</h2>
             </div>
         </section>
-        <section class="contenedornosotros">
-        <div class="grid-item-nosotros1">
-            <img src="../img/logo.png" alt="Imagen de hamburguesa en formato Logo " class="imglogonosotros">
-        </div>
-        <div class="grid-item-nosotros2">
-            <h3>¡NUESTRA HISTORIA!</h3>
-            <p>Hace más de dos décadas, en el corazón de nuestra querida ciudad, nació un lugar que se convertiría en un verdadero ícono gastronómico: "BURGUER'S MOM" Su historia es un viaje de pasión por la comida, amor por la tradición y un deseo inquebrantable de satisfacer los paladares más exigentes.
-            Todo comenzó cuando la abuela María, una apasionada cocinera de la vieja escuela, decidió compartir sus recetas secretas de hamburguesas con el mundo. Su deseo era simple pero poderoso: crear un lugar donde las personas pudieran disfrutar de auténticas hamburguesas caseras, preparadas con ingredientes frescos y de la más alta calidad.
-            </p>
-        </div>
-        <div class="grid-item-nosotros3">
-            <h3>MEDIO AMBIENTE<i class="bi bi-recycle"></i></h3>
-            <p>Entendemos que las actividades que realizamos día a día pueden tener impacto en nuestra comunidad. Por lo que estamos comprometidos a minimizar el impacto que generamos a través de diferentes acciones:
-             Nos preocupamos por reducir los efectos ecológicos que pueden tener nuestras operaciones
-             Les damos las herramientas a nuestros clientes para que puedan separar nuestros residuos para reciclar. Trabajamos en conjunto con Mamaland para distribuir bolsas biodegradables compostables en Kioscos de diarios cercanos a nuestros locales.
-             Fomentamos la reutilización de vasos para el Refill.
-            Buscamos bajar el impacto ambiental realizando acciones que nos ayuden a cuidar de nuestro planeta.
-            </p>
-        </div>
-        <div class="grid-item-nosotros4"> <img src="../img/recicleje.png" alt="Simbolo de reciclaje" class="imglogonosotros2"></div>
-      </section>
+
+        <section class="nosotros">
+            <div class="nosotros__cajita">
+                <img class="nosotros__img" src="../img/Logito.png" alt="">
+            </div>
+            <div class="nosotros__cajita">
+                <h3 class="nosotros__size__titulo">¡HISTORIA!</h3>
+                <p class="nosotros__size__parrafo">Fundado hace una década, en la ciudad de Buenos Aires, nació Royale's Cheese, una hamburguesería que se forjó con la pasión por las hamburguesas gourmet. Actualmente contamos con 6 locales artesanales y seguimos extendiendonos.
+                </p>
+            </div>
+        </section>
+        <section class="nosotros">
+            <div class="nosotros__cajita">
+                <h3 class="nosotros__size__titulo">FILOSOFIA</h3>
+                <p class="nosotros__size__parrafo">
+                    En Royale's Cheese, nuestra filosofía es simple pero impactante: creemos en la creación de experiencias gastronómicas inolvidables. Cada hamburguesa es más que un plato; es una fusión de ingredientes frescos, técnicas culinarias apasionadas y un toque distintivo que eleva lo ordinario a lo extraordinario. Nos esforzamos por ofrecer no solo comida excepcional, sino también un ambiente acogedor donde cada cliente se sienta como parte de nuestra historia. En Royale's Cheese, cada hamburguesa cuenta una narrativa del compromiso con la calidad y la satisfacción del cliente.
+                </p>
+            </div>
+            <div class="nosotros__cajita"> 
+                <img class="nosotros__img2" src="../img/Burguer.nosotross.png" alt="">
+            </div>
+        </section>
+
+        <section class="nosotros__trabajo">
+            <div class="nosotros__trabajo__div">
+                <h3 class="nosotros__trabajo__titulo">¿Queres trabajar con nosotros?</h3>
+                <h3 class="nosotros__trabajo__titulo2">Completa el formulario</h3>
+                <h3 class="nosotros__trabajo__titulo2"><i class="bi bi-arrow-down-square"></i></h3>
+            </div>
+            <div class="nosotros__form">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="nosotros__form__size form-label">Tu E-Mail</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu correo electronico">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="nosotros__form__size form-label">¿por qué queres trabajar con nosotros?</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Contanos..."></textarea>
+                  </div>
+                  <div class="padre__nosotros__boton">
+                      <input class="boton_nosotros btn btn-primary" type="submit" value="Enviar">
+                      <input class="boton_nosotros btn btn-primary" type="reset" value="Borrar">
+                  </div>
+                </div>
+                <div class="nosotros__separador__final">
+                   <p class="nosotros__separador__final__size">Te Esperamos☻</p>
+                </div>
+        </section>
     </main>
 
     <footer>
