Actualizacion de media quaries, header en responsive, y uno de los ultimos commit antes de entrega final

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="overflow__">
                 <div class="carrousel__overflow" draggable="true">
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Foto.1.overflow.jpg" alt="">
+                        <img class="carrousel__overflow__img" src="./img/Logito.png" alt="" style="background-color: #413d3d;">
                     </div>
                     <div class="carrousel__overflow__secciones">
                         <img class="carrousel__overflow__img" src="./img/Foto.2.overflow.jpg" alt="">
@@ -102,6 +102,9 @@
                     </div>
                     <div class="carrousel__overflow__secciones">
                         <img class="carrousel__overflow__img" src="./img/Foto.4.overflow.jpg" alt="">
+                    </div>
+                    <div class="carrousel__overflow__secciones">
+                        <img class="carrousel__overflow__img" src="./img/Logito.png" alt="" style="background-color: #413d3d;">
                     </div>
                 </div>
             </div>
