--- a/pages/locales.html
+++ b/pages/locales.html
@@ -49,6 +49,9 @@
             </div>
         </section>
 
+        <section class="container__desc">
+            <h2 class="container__desc__size">BUSCA TU LOCAL MáS CERCANO</h2>
+        </section>
 
         <div class="container__locales__info">
             <div class="caja__locales">
