--- a/pages/productos.html
+++ b/pages/productos.html
@@ -62,10 +62,13 @@
             </div>
         </section>
 
+
         <div class="productos__subtitulo__seccion" id="seccion__burguer">
             <div><h2 class="productos__subtitulo__seccion__size">BURGERS</h2></div>
         </div>
-
+        <div class="productos__subtitulo__seccion__desc">
+            <p class="productos__subtitulo__seccion__desc__size">🍔¡Bienvenido a nuestra deliciosa sección de hamburguesas! Sumérgite en un mundo de sabores irresistibles con nuestras creaciones artesanales🍔</p>
+        </div>
         <section class="container__productos">
             <div class="caja__productos">
                 <img class="caja__productos__Img" src="../img/Hamburguesa.simplee.png" alt="">
@@ -121,6 +124,9 @@
         <div class="productos__subtitulo__seccion" id="seccion__bebidas">
             <div><h2 class="productos__subtitulo__seccion__size">BEBIDAS</h2></div>
         </div>
+        <div class="productos__subtitulo__seccion__desc">
+            <p class="productos__subtitulo__seccion__desc__size">🍹Refrescá tu paladar con nuestra variedad de bebidas que complementarán a la perfección tu experiencia gastronómica🍹</p>
+        </div>
         <section class="container__productos">
             <div class="caja__productos">
                 <img class="caja__productos__Img caja__productos__Img__bebida" src="../img/cocacola.png" alt="">
@@ -173,7 +179,9 @@
         <div class="productos__subtitulo__seccion" id="secciones__postre">
             <div><h2 class="productos__subtitulo__seccion__size">POSTRES</h2></div>
         </div>
-
+        <div class="productos__subtitulo__seccion__desc">
+            <p class="productos__subtitulo__seccion__desc__size">🍦Sumérgite en nuestro paraíso de postres y helados artesanales que te van a dejar con ganas de más🍦</p>
+        </div>
         <section class="container__productos">
             <div class="caja__productos">
                 <img class="caja__productos__Img caja__productos__Img__bebida" src="../img/Sundae.png" alt="">
