--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -41,14 +41,14 @@
     </div>
   </nav>
   
-    <main >
+    <main style="background-color: #2b2f31;">
         <section class="nosotros__subtitulo">
             <div class="seccion__nosotros">
                 <h2 class="sobre__nosotros">SOBRE NOSOTROS</h2>
             </div>
         </section>
 
-        <section class="nosotros">
+        <section class="nosotros__1">
             <div class="nosotros__cajita">
                 <img class="nosotros__img" src="../img/Logito.png" alt="">
             </div>
@@ -58,7 +58,8 @@
                 </p>
             </div>
         </section>
-        <section class="nosotros">
+
+        <section class="nosotros__2">
             <div class="nosotros__cajita">
                 <h3 class="nosotros__size__titulo">FILOSOFIA</h3>
                 <p class="nosotros__size__parrafo">
@@ -73,7 +74,7 @@
         <section class="nosotros__trabajo">
             <div class="nosotros__trabajo__div">
                 <h3 class="nosotros__trabajo__titulo">¿Queres trabajar con nosotros?</h3>
-                <h3 class="nosotros__trabajo__titulo2">Completa el formulario</h3>
+                <h3 class="nosotros__trabajo__titulo2">Completá el formulario</h3>
                 <h3 class="nosotros__trabajo__titulo2"><i class="bi bi-arrow-down-square"></i></h3>
             </div>
             <div class="nosotros__form">
