--- a/pages/registrarme.html
+++ b/pages/registrarme.html
@@ -36,6 +36,7 @@
                         iniciar sesion
                       </button>
                       <button class="button__iniciar__crear_cuenta">
+                        ¿No estas registrado?
                         <a href="./crearcuenta.html">
                         Crear cuenta
                         </a>
