--- a/pages/crearcuenta.html
+++ b/pages/crearcuenta.html
@@ -15,6 +15,9 @@
     <main class="menu__registrarme"> 
         <div class="tarjeta__registrarme">
             <div class="container tarjeta__registrarme2">
+                <div>
+                    <h2><a href="./registrarme.html"><i class="bi bi-arrow-left" style="display: flex; justify-content: center; color: rgb(233, 175, 68);">VOLVER</i></a></h2>
+                </div>
                 <div class="logo div__logo__registrarme">
                     <img src="../img/Logito.png" alt="Hamburguesa logo" width="50" height="50">
                     <h1 class="logo_titulo">ROYALE'S CHEESE</h1>
